# Practice_2026_IT-Cube

./: .gitignore  README.md
Backend/: .env.example  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
Backend/alembic/: env.py  script.py.mako
Backend/alembic/versions/: 001_initial_schema.py
Backend/scripts/: backup_db.py  seed_dev.py
Backend/src/app/: config.py  dependencies.py  main.py
Backend/src/app/api/: router.py
Backend/src/app/api/v1/admin/: events.py  export.py  invites.py  teams.py
Backend/src/app/api/v1/auth/: admin.py  team.py
Backend/src/app/api/v1/public/: events.py
Backend/src/app/api/v1/registration/: teams.py
Backend/src/app/api/v1/team/: cabinet.py
Backend/src/app/core/: exceptions.py  logging.py  security.py  validators.py
Backend/src/app/db/: base.py  session.py
Backend/src/app/db/integrations/email/: smtp.py
Backend/src/app/db/integrations/sms/: __init__.py
Backend/src/app/db/models/: __init__.py  admin_user.py  enums.py  event.py  invite_code.py  otp_challenge.py  team.py  track.py
Backend/src/app/integrations/email/: __init__.py
Backend/src/app/integrations/sms/: base.py
Backend/src/app/repositories/: event_repository.py
Backend/src/app/schemas/: auth.py  event.py  invite.py  registration.py  team.py
Backend/src/app/services/: auth_service.py  event_service.py  export_service.py  helpers.py  invite_service.py  otp_service.py  registration_service.py  team_service.py
Backend/tests/: conftest.py
Backend/tests/integration/: test_health.py
Backend/tests/unit/: test_sequrity.py
(+130 files in other folders)
